[gd_scene load_steps=12 format=3 uid="uid://n23uw77trmcy"]

[ext_resource type="Texture2D" uid="uid://drqcff4yw3wel" path="res://assets/board.jpg" id="1_bvrql"]
[ext_resource type="Script" path="res://iso_board/board2.gd" id="1_kpi0e"]
[ext_resource type="PackedScene" uid="uid://dsjc64qqmtsei" path="res://player2/player_2.tscn" id="2_884au"]
[ext_resource type="Texture2D" uid="uid://xfxqcwqa3aqn" path="res://assets/board.png" id="3_ppc4b"]
[ext_resource type="Script" path="res://path/PathNode.gd" id="4_r8rts"]
[ext_resource type="Script" path="res://path/PathTransition.gd" id="5_isq2r"]
[ext_resource type="Script" path="res://iso_board/filled-vsplit.gd" id="5_kwp8y"]
[ext_resource type="Script" path="res://iso_board/Tree.gd" id="6_27tlw"]
[ext_resource type="Texture2D" uid="uid://vxdfd647dgi1" path="res://themes/folder_icon.png" id="7_7symv"]
[ext_resource type="Texture2D" uid="uid://tpxym72jguog" path="res://themes/document_icon.png" id="8_iffmt"]
[ext_resource type="PackedScene" uid="uid://dhvvyhj35v8lk" path="res://terminal/terminal.tscn" id="9_2j2p5"]

[node name="board2" type="Node2D"]
script = ExtResource("1_kpi0e")

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(818, 500)
texture = ExtResource("1_bvrql")

[node name="player_2" parent="." node_paths=PackedStringArray("pathNode") instance=ExtResource("2_884au")]
pathNode = NodePath("../inicio")

[node name="Camera2D" type="Camera2D" parent="player_2"]
show_behind_parent = true
position_smoothing_enabled = true

[node name="Board2" type="Sprite2D" parent="."]
visible = false
position = Vector2(818, 500)
texture = ExtResource("3_ppc4b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"BGMarginContainer"

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/Control"]
layout_mode = 2
split_offset = 500
script = ExtResource("5_kwp8y")
bg_color = Color(0.289063, 0.289063, 0.289063, 1)

[node name="CameraContainer" type="PanelContainer" parent="CanvasLayer/Control/VSplitContainer"]
layout_mode = 2
theme_type_variation = &"BGMarginContainer"

[node name="tab_container" type="TabContainer" parent="CanvasLayer/Control/VSplitContainer/CameraContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Escenario" type="Control" parent="CanvasLayer/Control/VSplitContainer/CameraContainer/tab_container"]
layout_mode = 2
theme_type_variation = &"CameraContainer"

[node name="code_editor" type="CodeEdit" parent="CanvasLayer/Control/VSplitContainer/CameraContainer/tab_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
caret_type = 1
caret_blink = true
line_folding = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
indent_size = 3
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/VSplitContainer"]
layout_mode = 2
theme_type_variation = &"BGFilledContainer"

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/Control/VSplitContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
split_offset = 200

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer/Control/VSplitContainer/PanelContainer/HSplitContainer"]
layout_mode = 2

[node name="Tree" type="Tree" parent="CanvasLayer/Control/VSplitContainer/PanelContainer/HSplitContainer/PanelContainer2"]
texture_filter = 1
layout_mode = 2
script = ExtResource("6_27tlw")
folder_icon = ExtResource("7_7symv")
document_icon = ExtResource("8_iffmt")

[node name="terminal" parent="CanvasLayer/Control/VSplitContainer/PanelContainer/HSplitContainer" instance=ExtResource("9_2j2p5")]
layout_mode = 2

[node name="inicio" type="Node2D" parent="."]
position = Vector2(1040, 1040)
script = ExtResource("4_r8rts")
light_color = 4

[node name="transici√≥n" type="Node2D" parent="inicio" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../red_1")

[node name="red_1" type="Node2D" parent="."]
position = Vector2(1040, 896)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="red_1" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../red_2")

[node name="red_2" type="Node2D" parent="."]
position = Vector2(939, 813)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="red_2" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_3")

[node name="Position_3" type="Node2D" parent="."]
position = Vector2(854, 687)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_3" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_4")

[node name="PathTransition2" type="Node2D" parent="Position_3" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_16")

[node name="Position_4" type="Node2D" parent="."]
position = Vector2(670, 690)
script = ExtResource("4_r8rts")
light_color = 2

[node name="PathTransition" type="Node2D" parent="Position_4" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_6")

[node name="Position_6" type="Node2D" parent="."]
position = Vector2(521, 687)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_6" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_7")

[node name="PathTransition2" type="Node2D" parent="Position_6" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_20")

[node name="Position_20" type="Node2D" parent="."]
position = Vector2(515, 605)
script = ExtResource("4_r8rts")
light_color = 1

[node name="PathTransition" type="Node2D" parent="Position_20" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_21")

[node name="Position_21" type="Node2D" parent="."]
position = Vector2(517, 492)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_21" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_22")

[node name="Position_22" type="Node2D" parent="."]
position = Vector2(427, 533)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_22" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_7")

[node name="Position_7" type="Node2D" parent="."]
position = Vector2(457, 741)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_7" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_8")

[node name="Position_8" type="Node2D" parent="."]
position = Vector2(192, 745)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_8" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_9")

[node name="Position_9" type="Node2D" parent="."]
position = Vector2(140, 863)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_9" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_11")

[node name="Position_11" type="Node2D" parent="."]
position = Vector2(264, 972)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_11" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_12")

[node name="Position_12" type="Node2D" parent="."]
position = Vector2(388, 972)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_12" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_13")

[node name="Position_13" type="Node2D" parent="."]
position = Vector2(388, 1023)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_13" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_14")

[node name="Position_14" type="Node2D" parent="."]
position = Vector2(616, 1023)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_14" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_15")

[node name="Position_15" type="Node2D" parent="."]
position = Vector2(616, 971)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_15"]
script = ExtResource("5_isq2r")

[node name="Position_16" type="Node2D" parent="."]
position = Vector2(959, 608)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_16" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_17")

[node name="Position_17" type="Node2D" parent="."]
position = Vector2(983, 443)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_17" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_18")

[node name="PathTransition2" type="Node2D" parent="Position_17" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../yellow_1")

[node name="PathTransition3" type="Node2D" parent="Position_17" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_23")

[node name="Position_18" type="Node2D" parent="."]
position = Vector2(1064, 470)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_18" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_19")

[node name="Position_23" type="Node2D" parent="."]
position = Vector2(1028, 322)
script = ExtResource("4_r8rts")
light_color = 1

[node name="PathTransition" type="Node2D" parent="Position_23" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_24")

[node name="Position_24" type="Node2D" parent="."]
position = Vector2(1048, 182)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_24" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_25")

[node name="Position_25" type="Node2D" parent="."]
position = Vector2(1048, 51)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_25" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../Position_26")

[node name="Position_26" type="Node2D" parent="."]
position = Vector2(858, 59)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_26"]
script = ExtResource("5_isq2r")

[node name="Position_19" type="Node2D" parent="."]
position = Vector2(1070, 534)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="Position_19" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../tarjeta")

[node name="tarjeta" type="Node2D" parent="."]
position = Vector2(1175, 534)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="tarjeta" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../tarjeta2")

[node name="tarjeta2" type="Node2D" parent="."]
position = Vector2(1263, 534)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="tarjeta2" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../tarjeta3")

[node name="tarjeta3" type="Node2D" parent="."]
position = Vector2(1375, 534)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="tarjeta3"]
script = ExtResource("5_isq2r")

[node name="yellow_1" type="Node2D" parent="."]
position = Vector2(879, 329)
script = ExtResource("4_r8rts")
light_color = 3

[node name="PathTransition" type="Node2D" parent="yellow_1" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../pasillo_2")

[node name="pasillo_2" type="Node2D" parent="."]
position = Vector2(744, 303)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="pasillo_2" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../pasillo_5")

[node name="pasillo_5" type="Node2D" parent="."]
position = Vector2(608, 302)
script = ExtResource("4_r8rts")
light_color = 2

[node name="PathTransition" type="Node2D" parent="pasillo_5" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../pasillo_6")

[node name="pasillo_6" type="Node2D" parent="."]
position = Vector2(525, 311)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="pasillo_6" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../pasillo_7")

[node name="pasillo_7" type="Node2D" parent="."]
position = Vector2(516, 366)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="pasillo_7" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../pasillo_3")

[node name="pasillo_3" type="Node2D" parent="."]
position = Vector2(603, 412)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="pasillo_3" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../pasillo_4")

[node name="PathTransition2" type="Node2D" parent="pasillo_3" node_paths=PackedStringArray("destination")]
script = ExtResource("5_isq2r")
destination = NodePath("../../pasillo_5")

[node name="pasillo_4" type="Node2D" parent="."]
position = Vector2(647, 515)
script = ExtResource("4_r8rts")

[node name="PathTransition" type="Node2D" parent="pasillo_4"]
script = ExtResource("5_isq2r")

[connection signal="item_selected" from="CanvasLayer/Control/VSplitContainer/PanelContainer/HSplitContainer/PanelContainer2/Tree" to="." method="_on_tree_item_selected"]
